ICO: Skip checking declared entry bounds when file is completelly received.

It is relativelly common that the last entry offset + bytesize is two bytes over
file byte size. When calculating frame count, return entry count and allow
decoder to decode file.

BUG=653075

Review-Url: https://codereview.chromium.org/2391073003
Cr-Commit-Position: refs/heads/master@{#423398}

Former-commit-id: c3f6d43c1b2d245063da70a1d49247e8e2d5ee21